# ci-cd-hub-canary-python-fail

./: .ci-hub.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: hub-ci.yml
src/canary/: __init__.py  bad_style.py  math.py  unused.py
tests/: test_math.py
