[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-hub-canary-python"
version = "0.1.0"
description = "CI/CD Hub canary repo (Python)"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
